@@ -3,6 +3,7 @@
 Crash Bandicoot
 - New feature: Enable Unused Enemies
 - New feature: Randomize Level Order
+- New feature: Replace The Great Hall With Stormy Ascent
 
 Crash Bandicoot 2: Cortex Strikes Back
 - Randomize World Textures: Fixed not being able to build using this feature
